[package]
name = "tracekey"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
config = "0.15.15"
anyhow = "1.0.99"
csv = "1.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
statistical = "1.0.0"
humantime = "2.2.0"
