[package]
name = "tracekey"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
config = "0.15.17"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
statistical = "1.0.0"
humantime = "2.3.0"
humantime-serde = "1.1.1"
url = "2.5.7"
rand = "0.9.2"
scopeguard = "1.2.0"
