[package]
name = "tracekey"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.13.0", features = ["json"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
config = "0.15.15"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
colored = "3.0.0"
statistical = "1.0.0"
humantime = "2.2.0"
url = "2.5.7"
rand = "0.9.2"
